; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/gp2x/extr_soc_mmsp2.c_pause940.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/libpicofe/gp2x/extr_soc_mmsp2.c_pause940.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@memregs = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pause940(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32*, i32** @memregs, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 1154
  %8 = load i32, i32* %7, align 4
  %9 = and i32 %8, 65534
  store i32 %9, i32* %7, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load i32*, i32** @memregs, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 1154
  %13 = load i32, i32* %12, align 4
  %14 = or i32 %13, 1
  store i32 %14, i32* %12, align 4
  br label %15

15:                                               ; preds = %10, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
